2008-06-16  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mktmpl.in:
	  Don't reuse file var, fixes warning context.
  
	* gtkdoc-scan.in:
	  Also accept *.hh as headers suffix.

2008-06-10  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Include original CFLAGS / LDFLAGS when building the scanner. Allows to
	  have own FLAGS defined in addition.

2008-06-08  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More planning.

2008-06-08  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Add more ideas.
  
	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  Merge two fwrite calls.
  
	* tests/gobject/examples/gobject.c:
	* tests/gobject/src/gobject.c:
	  Demostrate how to include source fragments from external files.

	* tests/gobject/src/giface.h:
	* tests/gobject/src/gobject.h:
	  Documents two entries.

2008-06-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	Add "%s" format strings to printf-like functions when printing
	a string. Fixes #536980.

2008-06-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Fix quoting.

	* tools/migratetmpl.pl:
	  Add first version of a tool to support migration from tmpl docs to
	  source code comments.

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Correct invocation for gnome-doc-prepare.

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	  Handle file or line being undefined.

	* gtkdoc-mkdb.in:
	  Warn about repeated symbols in sections. Also give line of previous
	  occurrance. Also give that info for double file entries. Fixes #473342
          Give correct error locate for one warning. Fixes #532395 partialy

2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't warn about overriden docs comment if its the same text.

2008-06-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO: