@@ -1,3 +1,8 @@
+2008-06-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* tools/migratetmpl.pl:
+	  Convert single line c comments to c++ ones. Indent multiline parameter docs.
+
 2008-06-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mktmpl.in:
